--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,14 @@
 *iml
 .idea
+
 vendor
-02-tartine-name
+
+bazel-03-tartine
+bazel-bin
+bazel-out
+bazel-testlogs
+
+cmd/tartine-giphy/tartine-giphy
+tartine-giphy
+cmd/tartine-name/tartine-name
+./tartine-name
